Deployed  with MkDocs version: 1.1.2

--- a/index.html
+++ b/index.html
@@ -176,13 +176,18 @@
 <ul>
 <li><a href="http://www.mafengwo.cn/">Travel Web</a></li>
 </ul>
+<hr />
 <!-- 不蒜子计数 -->
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
-<p><span id="busuanzi_container_site_pv" >| Total <span id="busuanzi_value_site_pv"></span> Visits </span>
+<p><span id="busuanzi_container_site_pv" >Total <span id="busuanzi_value_site_pv"></span> Visits </span>
 <span id="busuanzi_container_site_uv" >| Total <span id="busuanzi_value_site_uv"></span> Guests </span>
 <!-- 不蒜子计数 --></p>
+<!-- map -->
+
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=lLh5Pmp9DZ23RZtpTTLsxGJNHt0wWGMrk31-bd8S2JI&cl=ffffff&w=a"></script>
+
 <hr /></div>
             </div>
         </div>
@@ -267,5 +272,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-12-05 01:23:50.858707+00:00
+Build Date UTC : 2020-12-06 06:36:18.081496+00:00
 -->
