Deployed  with MkDocs version: 1.1.2

--- a/academic-maths/index.html
+++ b/academic-maths/index.html
@@ -100,7 +100,7 @@
             
             <li class="nav-item" data-level="1"><a href="#academic" class="nav-link">Academic</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-level="2"><a href="#maths-key-knowledge" class="nav-link">Maths - Key Knowledge</a>
+            <li class="nav-item" data-level="2"><a href="#maths-problem-collections" class="nav-link">Maths Problem Collections</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -121,16 +121,19 @@
 
 <h1 id="academic">Academic</h1>
 <hr />
-<!---
-*****************************************
-    Key Maths
-*****************************************
---->
+<!--- math problem collection--->
 
-<h2 id="maths-key-knowledge"><span style="color:blue"><strong>Maths - Key Knowledge</strong></span></h2>
+<h2 id="maths-problem-collections"><span style="color:blue"><strong>Maths Problem Collections</strong></span></h2>
+<p>[PDF File]</p>
 <ul>
-<li><strong>Introduction to online convex optimization</strong></li>
-<li>https://sites.google.com/view/intro-oco/ver-2-0?authuser=0</li>
+<li>
+<p>Contents:</p>
+<ol>
+<li>[Linear Programming] Randomized Kaczmarz Algorithm</li>
+<li>[MATRIX] Orthogonal Projection</li>
+<li>[Linear Algebra] Vector Decomposition, Span and Null</li>
+</ol>
+</li>
 </ul>
 <hr />
 <hr />
