Deployed  with MkDocs version: 1.1.2

--- a/academic-maths/index.html
+++ b/academic-maths/index.html
@@ -124,14 +124,15 @@
 <!--- math problem collection--->
 
 <h2 id="maths-problem-collections"><span style="color:blue"><strong>Maths Problem Collections</strong></span></h2>
-<p>[PDF File]</p>
+<p><a href="\files\math_problem_collection.pdf">Download PDF</a></p>
 <ul>
 <li>
-<p>Contents:</p>
+<p>Table of Content:</p>
 <ol>
 <li>[Linear Programming] Randomized Kaczmarz Algorithm</li>
 <li>[MATRIX] Orthogonal Projection</li>
 <li>[Linear Algebra] Vector Decomposition, Span and Null</li>
+<li>[STATS] L1 and L2 regulation for feature selection</li>
 </ol>
 </li>
 </ul>
