Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -138,10 +138,13 @@
 <h2 id="idea-topics"><span style="color:blue"><strong>Idea Topics</strong></span></h2>
 <ol>
 <li>
-<p><strong>[Optimization] Approximation &amp; function optimization</strong></p>
+<p><strong>[Optimization]</strong> Matrix Recovery</p>
 <ul>
-<li>Learning Nonlinear Mixtures: Identifiability and Algorithm</li>
+<li>Backup: Learning Nonlinear Mixtures: Identifiability and Algorithm</li>
 </ul>
+</li>
+<li>
+<p><strong>[Statistics]</strong> Chance-Constrained</p>
 </li>
 <li>
 <p><strong>[Signal Processing] multi-source multi-target tracking</strong></p>
@@ -149,12 +152,6 @@
 <li>Statistical Multi-source Multi-target Information Fusion</li>
 <li>Trajectory Poisson multi-Bernoulli filters</li>
 <li>Paper: The Gaussian Mixture Prob Hypothesis Density Filter: gmphd github</li>
-</ul>
-</li>
-<li>
-<p><strong>[Statistics]</strong></p>
-<ul>
-<li>Statistical Inference for the EU portfolio in high dimensions</li>
 </ul>
 </li>
 </ol>
