Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -163,6 +163,7 @@
 --->
 
 <h2 id="key-links"><span style="color:blue"><strong>Key Links</strong></span></h2>
+<p>-- P0 --</p>
 <ul>
 <li>
 <p><a href="https://ieeexplore.ieee.org/xpl/tocresult.jsp?isnumber=4359509"><strong>TSP</strong></a></p>
@@ -174,18 +175,22 @@
 </ul>
 </li>
 <li>
-<p><a href="https://epubs.siam.org/journal/sjope8"><strong>SIAM J. Optimization (P1)</strong></a></p>
-</li>
-<li>
-<p><a href="https://epubs.siam.org/journal/tprbau"><strong>SIAM Probability (P1)</strong></a></p>
-</li>
-<li>
-<p><a href="https://epubs.siam.org/journal/sjmael"><strong>SIAM J. Matrix (P2)</strong></a></p>
-</li>
-<li>
-<p><a href="https://epubs.siam.org/journal/sjcodc"><strong>SIAM J. Control &amp; Optimization (P2)</strong></a></p>
+<p><a href="https://epubs.siam.org/journal/sjope8"><strong>SIAM J. Optimization</strong></a></p>
 </li>
 </ul>
+<p>-- P1 --</p>
+<ul>
+<li>
+<p><a href="https://epubs.siam.org/journal/tprbau"><strong>SIAM Probability</strong></a></p>
+</li>
+<li>
+<p><a href="https://epubs.siam.org/journal/sjmael"><strong>SIAM J. Matrix</strong></a></p>
+</li>
+<li>
+<p><a href="https://epubs.siam.org/journal/sjcodc"><strong>SIAM J. Control &amp; Optimization</strong></a></p>
+</li>
+</ul>
+<p>-- P2 --</p>
 <hr />
 <hr />
 <!---
