Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -138,8 +138,10 @@
 <h2 id="idea-topics"><span style="color:blue"><strong>Idea Topics</strong></span></h2>
 <ol>
 <li>
-<p><strong>[Optimization]</strong> Matrix Recovery</p>
+<p><strong>[Optimization]</strong> Network Trajectory Optimization</p>
 <ul>
+<li>coverage with connectivity</li>
+<li>multi-hop optimization with connectivity</li>
 <li>Backup: Learning Nonlinear Mixtures: Identifiability and Algorithm</li>
 </ul>
 </li>
