--- a/SDR.html
+++ b/SDR.html
@@ -139,7 +139,8 @@
 <hr />
 <h2 id="classic-papers">Classic Papers</h2>
 <ul>
-<li>Self-Interference Tutorial: <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9005407">https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9005407</a></li>
+<li>Self-Interference Tutorial: </li>
+<li><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9005407">https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9005407</a></li>
 </ul>
 <hr />
 <h2 id="links">Links</h2></div>
