Deployed  with MkDocs version: 1.2.1

--- a/SDR.html
+++ b/SDR.html
@@ -139,8 +139,10 @@
 <hr />
 <h2 id="classic-papers">Classic Papers</h2>
 <ul>
-<li>Self-Interference Tutorial: </li>
+<li>Self-Interference Tutorial: <ul>
 <li><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9005407">https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9005407</a></li>
+</ul>
+</li>
 </ul>
 <hr />
 <h2 id="links">Links</h2></div>
