Deployed  with MkDocs version: 1.4.2

--- a/mgmt/index.html
+++ b/mgmt/index.html
@@ -82,6 +82,15 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="management-ideas">Management Ideas</h1>
+<p>Guide</p>
+<ul>
+<li>Math</li>
+<li>Tech</li>
+<li>Mgmt</li>
+<li>Reading</li>
+<li>Outdoor</li>
+<li>Family</li>
+</ul>
 <p>HBR: <a href="https://hbr.org/">https://hbr.org/</a></p>
 <p><strong>A workaholic Guide to Reclaiming Your Life</strong></p>
 <ul>
